Swedish translation update
git-svn-id: https://fslint.googlecode.com/svn/trunk@106 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,7 +1,8 @@
 2.23 dd/mm/yy
 	* Translations:
 		* Added: Italian, Slovak, Hewbrew.
-		* Updated: Chinese (simplified), French, German, Vietnamese.
+		* Updated: Chinese (simplified), French, German,
+		  Swedish, Vietnamese.
 	* Fixes:
 		* Make the GUI handle paths with spaces in names of empty dirs,
 		  and spaces at the end of names of duplicate files.
