Updated Italian and Hebrew translations. These new translations are now 100% and 92% complete respectively. Removed partial slovak translation.
git-svn-id: https://fslint.googlecode.com/svn/trunk@107 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,6 @@
 2.23 dd/mm/yy
 	* Translations:
-		* Added: Italian, Slovak, Hewbrew.
+		* Added: Italian, Hewbrew.
 		* Updated: Chinese (simplified), French, German,
 		  Swedish, Vietnamese.
 	* Fixes:
